src/test/deca/context/invalid/invalid_essentiel/method_body_2.deca
// Description:
//    Programme de test de declaration incorrect du corps d'une méthode.
//

class A {
	int x;
	float y;
	int z;
	
	int q(int i, float f){
		x = i;
		y = i + f;	
		return y;
	}
}
